--- a/PowerPDF-Connector-CurrentDocumentBluePrint/CurrentDocumentBluePrint.csproj
+++ b/PowerPDF-Connector-CurrentDocumentBluePrint/CurrentDocumentBluePrint.csproj
@@ -66,7 +66,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DMSConnector">
-      <HintPath>.\DMSConnector.dll</HintPath>
+      <HintPath>..\References\DMSConnector.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="System" />
@@ -164,7 +164,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PreBuildEvent>"$(FrameworkSDKDir)\bin\NETFX 4.8 Tools\tlbimp.exe" "$(SolutionDir)References\DMSConnector.tlb" /out:"$(ProjectDir)DMSConnector.dll"</PreBuildEvent>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
