--- a/PowerPDF-Connector-CurrentDocumentBluePrint/CurrentDocumentBluePrint.csproj
+++ b/PowerPDF-Connector-CurrentDocumentBluePrint/CurrentDocumentBluePrint.csproj
@@ -85,11 +85,11 @@
     <Compile Include="Langs.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PropertySheet2.cs">
+    <Compile Include="ConfigurationControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="PropertySheet2.designer.cs">
-      <DependentUpon>PropertySheet2.cs</DependentUpon>
+    <Compile Include="ConfigurationControl.designer.cs">
+      <DependentUpon>ConfigurationControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Resources\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -98,8 +98,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="PropertySheet2.resx">
-      <DependentUpon>PropertySheet2.cs</DependentUpon>
+    <EmbeddedResource Include="ConfigurationControl.resx">
+      <DependentUpon>ConfigurationControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\Resources.de.resx" />
     <EmbeddedResource Include="Resources\Resources.resx">
